portfolio/src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.t-card {
  margin: 20px;
}

.t-card-image {
  border-radius: 10px;
  /* width: 1500px;
  height: 980px; */
  /* width: 25%;
  height: 100%; */
  box-shadow: 0px 0px 3px 1px #ccc;
}

.t-card-info {
 margin-top: 10px;
 min-height: 100px;
}

.t-card-title{
  font-size: 24px;
  margin: 0px;
}

.t-card-subtitle {
  font-size: 16px;
  margin: 0px;
}

.success-msg{
  color: #57a773;
  padding: 10px 15px;
}

.error-msg{
  color: #ee6352;
  padding: 10px 15px;
}

